Jumbotron correctly implemented, scales correctly. CTA section added to bottom of Landing Page Jumbotron (some issues with spacing, does not always apear at bottom of envelope).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,29 @@
 /* ----------------------------------Meta Level */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|exo:100,200,300,400,500,600,700');
-
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'exo', sans-serif;
 }
-
 
 /* ----------------------------------The Header */
 
 header {}
 
+.jumbotron {
+    background-attachment: fixed;
+    background-image: url('../images/dair-art.jpg');
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 95vh;
+    width: 100vw;
+    margin-bottom: 0px;
+    /* z-index: 1; */
+}
+
 .landing-page-top {}
 
-.gaeilge-container {
-}
+.gaeilge-container {}
 
 .gaeilge {
     text-decoration: none;
@@ -41,34 +50,51 @@ header {}
 }
 
 .music-player-text {
-    /* text-align: left; */
-    /* margin: 2px 35px 0px 0px; */
     color: #A51723;
 }
 
-.landing-page-bottom {
-    padding: 0;
-}
-
-.hero-image img {
-    width: 100%;
-    height: auto;
-}
-
 .cta {
-    background-color: white;
+    text-align: center;
+    /* background-color: white; */
+    color: #A51723;
+    opacity: 0.8;
+    position: scroll;
+    height: 5vh;
+    /* May not need these now */
+    /* margin: 0; */
+    /* margin-top: -10px; */
+    /* height: 40px; */
 }
+
+.cta-text {
+    padding-top: 5px;
+}
+
+.cta-text p a {
+    text-decoration: none;
+    color: #12993b;
+    transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+
+.cta-text p a:hover {
+    text-decoration: none;
+    color: #1b631f;
+}
+
 
 .banner-logo {}
 
-
 /* ----------------------------------Navbar */
 
+nav {}
+
 .nav-item {
+    background-color: #D9D4BF;
     border: .5px solid #707070;
     border-radius: 5px;
-    background-color: #D9D4BF;
-    
 }
 
 .navbar .navbar-nav .nav-item a {
@@ -83,7 +109,6 @@ header {}
     color: #A51723;
 }
 
-
 /* ----------------------------------The Section */
 
 /* ----------------------------------The Footer */
@@ -97,16 +122,15 @@ footer {
     padding-top: 10px;
     color: #73715F;
     opacity: 0.8;
-    /* font-size: 14px; */
 }
 
 .social-media-links {}
 
 .social-media-links li a i {
-    padding: 15px 12px 0px;
-    line-height: 10px;
     color: #73715F;
     background: #CFCDBF;
+    line-height: 10px;
+    padding: 15px 12px 0px;
     transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
@@ -117,15 +141,12 @@ footer {
     color: #A51723;
 }
 
-
 /* ----------------------------------Media Queries */
 
-/* This is unecessary with the larger image */
 @media (min-width: 992px) and (max-width: 1199px) {
     .gaeilge {
         margin-right: -15px;
     }
-
     .music-container {
         margin-right: -20px;
     }
@@ -135,42 +156,45 @@ footer {
     .navbar .navbar-nav .nav-item {
         margin-bottom: 70px;
     }
-
     .gaeilge-container {
         padding-top: 10px;
     }
 }
 
-@media(max-width: 767px) {    
+@media(max-width: 991px) {
+    .cta-text p span {
+        display: none;
+    }
+}
+
+@media(max-width: 767px) {
     .nav-item {
         border: none;
         border-radius: 0;
         background-color: none;
     }
-    
     .copyright-text {
         padding-top: 0px;
     }
-
     .social-media-links li a i {
         font-size: 20px;
         padding: 7px 10px 10px;
     }
 }
 
-@media(max-width: 575px) {
+@media(max-width: 575px) {    
     .gaeilge {
         display: none;
     }
-
-    footer {
-        height: 50px;
+    .cta-text {
+        font-size: 0.8em;
     }
-
+    footer {
+        /* height: 50px; Unsure if this is needed now*/
+    }
     .social-media-links {
         text-align: center;
     }
-    
     .social-media-links li a i {
         font-size: 20px;
         padding: 7px 10px 10px;
